Fix jumpy visuals after expression add.

--- a/src/herbie/ErrorPlot.css
+++ b/src/herbie/ErrorPlot.css
@@ -15,6 +15,10 @@
   fill: var(--foreground-deemphasize-color);
 }
 
+.empty-error-plot {
+  height: 209px;
+}
+
 .error-plot svg {
   margin-top: 5px;
   margin-right: 10px;
